# BehaviorCI

./: .flake8  .gitignore  404.html  :memory:  :memory:-shm  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_critical_002_variance_logic.py  test_fix_005_duplicate_id.py
.behaviorci/: behaviorci.db
.github/workflows/: ci.yml  docs.yml
ci/: index.html
cli/: index.html
docs/: ci.md  cli.md  embedders.md  faq.md  guide.md  index.md  quickstart.md
embedders/: index.html
examples/: test_regression.py
examples/__pycache__/: test_app.cpython-312-pytest-9.0.2.pyc.748  test_regression.cpython-312-pytest-9.0.2.pyc.748
faq/: index.html
guide/: index.html
quickstart/: index.html
search/: search_index.json
src/behaviorci/: __init__.py  api.py  cli.py  comparator.py  embedder.py  exceptions.py  models.py  plugin.py  storage.py
tests/: __init__.py  conftest.py  support.py  test_api.py  test_behaviorci.py  test_bug_001_datetime_import.py  test_bug_002_concurrency.py  test_bug_003_singleton.py  test_cli.py  test_comparator.py  test_critical_001_single_execution.py  test_critical_002_variance_logic.py  test_embedder.py  test_fix_004_record_missing.py  test_fix_005_duplicate_id.py  test_fix_012_model_mismatch.py  test_fix_013_parametrized.py  test_high_001_thread_safe_embedder.py  test_plugin.py  test_storage.py
tests/__pycache__/: conftest.cpython-312-pytest-9.0.2.pyc.665  test_behaviorci.cpython-312-pytest-9.0.2.pyc.998  test_bug_001_datetime_import.cpython-312-pytest-9.0.2.pyc.928  test_bug_002_concurrency.cpython-312-pytest-9.0.2.pyc.1068  test_bug_002_concurrency.cpython-312-pytest-9.0.2.pyc.678  test_bug_003_singleton.cpython-312-pytest-9.0.2.pyc.762  test_critical_001_single_execution.cpython-312-pytest-9.0.2.pyc.775  test_critical_001_single_execution.cpython-312-pytest-9.0.2.pyc.858  test_critical_001_single_execution.cpython-312-pytest-9.0.2.pyc.878  test_critical_001_single_execution.cpython-312-pytest-9.0.2.pyc.930  test_critical_001_single_execution.cpython-312-pytest-9.0.2.pyc.954  test_critical_002_variance_logic.cpython-312-pytest-9.0.2.pyc.703  test_critical_002_variance_logic.cpython-312-pytest-9.0.2.pyc.723  test_critical_002_variance_logic.cpython-312-pytest-9.0.2.pyc.995  test_fix_004_record_missing.cpython-312-pytest-9.0.2.pyc.830  test_fix_004_record_missing.cpython-312-pytest-9.0.2.pyc.928  test_fix_005_duplicate_id.cpython-312-pytest-9.0.2.pyc.1068  test_fix_005_duplicate_id.cpython-312-pytest-9.0.2.pyc.872  test_fix_012_model_mismatch.cpython-312-pytest-9.0.2.pyc.775  test_fix_013_parametrized.cpython-312-pytest-9.0.2.pyc.665  test_fix_013_parametrized.cpython-312-pytest-9.0.2.pyc.775  test_high_001_thread_safe_embedder.cpython-312-pytest-9.0.2.pyc.755  test_high_001_thread_safe_embedder.cpython-312-pytest-9.0.2.pyc.884
tests/examples/: __init__.py  conftest.py  fake_llm.py  mock_embedder.py  test_app.py  test_regression.py
tests/examples/__pycache__/: conftest.cpython-312-pytest-9.0.2.pyc.775  test_app.cpython-312-pytest-9.0.2.pyc.946  test_regression.cpython-312-pytest-9.0.2.pyc.1184
