[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviorci"
version = "0.2.0"
description = "Pytest-native behavioral regression testing for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BehaviorCI Contributors"}
]
keywords = ["pytest", "llm", "testing", "regression", "embeddings", "semantic", "snapshot", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pytest>=7.0.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.0.0"
]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "pytest-xdist>=3.0.0",
]
docs = [
    "mkdocs-material>=9.5.0",
]

[project.scripts]
behaviorci = "behaviorci.cli:main"

[project.entry-points.pytest11]
behaviorci = "behaviorci.plugin"

[project.urls]
Homepage = "https://github.com/0-uddeshya-0/BehaviorCI"
Repository = "https://github.com/0-uddeshya-0/BehaviorCI"
Issues = "https://github.com/0-uddeshya-0/BehaviorCI/issues"
Documentation = "https://0-uddeshya-0.github.io/BehaviorCI/"
Changelog = "https://github.com/0-uddeshya-0/BehaviorCI/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["behaviorci"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
